Innovation 7.x-1.9, 2017-02-15
------------------------------
- Modified some font colors and sizes on Quicktab and Panopoly tabs and accordions to make the ASU web standard.
- Made the blue button darker so it has 4.5:1 contrast ratio.
- Made the rebuild table button on the table widget visible and red.

Innovation 7.x-1.8, 2017-02-15
------------------------------
- In-Page Editor selections now properly displays eligible content panes again when the "+" button is
  clicked and a subcategory (such as "Views", "Blocks", etc.) is selected
- moved the skip-to-content link inside a landmark (<header>)
- increased the font size on QuickTab content

Innovation 7.x-1.7, 2017-01-19
------------------------------
ACCESSIBILITY UPDATES
- The base font size is now responsive
- Added aria labels and landmarks for better screen reader support.
- Darkening breadcrumb font colors and focus styling for better visibility contrast.
- The In-Page Editor (IPE) link and image layouts now have responsive sizes.
- Properly removing the unused ADA incompliant hamburger menu
- Users are now able to tab through all Megamenu itemsHeaders are now semantically correct to better support site
  accessibility

Innovation 7.x-1.6, 2016-09-12
------------------------------
- Color of primary and blue button text now white on :hover

Innovation 7.x-1.5, 2016-09-12
------------------------------
- Removed IE9 support (CSS file removed)
- Fixed Token module layout issue (Browse Available Tokens popup was broken)
- Updated the CSS styling for the main header title right below the ASU logo
- Added second <table> style ("Bordered table") to the WYSIWYG editor's Styling drop down list

Innovation 7.x-1.4, 2016-07-15
------------------------------
- Added second table style when creating an HTML table in the WYSIWYG editor
- Added more 100% wide columns to the Beast layout
- Added two new layouts (Brenhan Plus & Brenham Plus Flipped)

Innovation 7.x-1.3, 2016-06-29
------------------------------